[metadata]
name = pyil2
version = 0.1.1
author = InterlockLedger Network
author_email = dchino@il2.io
description = Python client to the InterlockLedger Node REST API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/interlockledger/py-interlockledger-rest-client
project_urls =
    Bug Tracker = https://github.com/interlockledger/py-interlockledger-rest-client/issues
    Documentation = https://interlockledger.github.io/py-interlockledger-rest-client
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.11
install_requires = 
        pydantic>=2.6.1
        requests==2.32.2
        pyOpenSSL>=24.1.0
        pyilint>=0.2.2
        pyiltags>=0.1.1
    

[options.packages.find]
where = src
